changes to execute and start of tty

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,7 @@
 		"minishell.h": "c",
 		"readline.h": "c",
 		"stdio.h": "c",
-		"libft.h": "c"
+		"libft.h": "c",
+		"get_next_line.h": "c"
 	}
 }
